--- a/index.html
+++ b/index.html
@@ -15,16 +15,7 @@ wght@700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
 
-<!-- 
-    <div class="top-bar">
-    <span><ion-icon name="call-outline"></ion-icon> 111 222 333</span>
-    <ul> 
-        <li><a href="#"><ion-icon name="logo-facebook"></ion-icon></a></li>
-        <li><a href="#"><ion-icon name="logo-twitter"></ion-icon></a></li>
-        <li><a href="#"><ion-icon name="logo-instagram"></ion-icon></a></li>
-    </ul>
-</div>
--->
+<!---------------HEADER------------->
 
 <nav>
     <div class="logo">
@@ -43,18 +34,16 @@ wght@700;800;900&display=swap" rel="stylesheet">
 <!----------------------------->
 <div class="maincon">
     <div class="container">
-        <img src="Images/1.png">
+        <img src="Images/Iskan-Ako-Design.png">
         <h1 class="caption">Log-in as:</h1>
     </div>
     
-    <a href="./Student-Sign-In.html" class="submit-btn">Student</a>
-    <a href="./Faculty-Sign-In.html" class="btnfacu">Faculty</a>
+    <div class="BTN">
+        <a href="./Student-Sign-In.html" class="Stud-btn">Student</a>
+        <a href="./Faculty-Sign-In.html" class="Facu-btn">Faculty</a>
+    </div>
 </div>
 <!----------------------------->
-
-
-
-
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 <script>
